--- a/public/draw.html
+++ b/public/draw.html
@@ -18,7 +18,7 @@
             <button type="button" style="margin: 10px" id='sendsnap'>send drawing</button>
         </div>
         <div class="footer">
-            <a href='index.html'>see the homies</a>
+            <a href='homies.html'>see the homies</a>
             <a href='uploadphoto.html'>take a snap</a>
         </div>
         
