--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
-        <title>☆HOMIES☆</title>
-    </head>
-    <body>
-        <script src="index.js"></script>
-  
-        <div id="title">HOMIES</div>
-        <div class="flex-container" id="homies"></div>
-  
-        <div class = "footer">
-            <a href="uploadphoto.html">take a snap</a>
-            <a href="draw.html">create some art</a>
-        </div>
-        
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="p5.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script>
+    <title>Document</title>
+</head>
+<body>
+    <script src="sketch.js"></script>
+    
+</body>
 </html>
