--- a/public/uploadphoto.html
+++ b/public/uploadphoto.html
@@ -18,7 +18,7 @@
             <button type="button" style="margin: 10px" id='sendsnap'>add a homie</button>
         </div>
         <div class="footer">
-            <a href='index.html'>see the homies</a>
+            <a href='homies.html'>see the homies</a>
             <a href='draw.html'>create some art</a>
         </div>
  
